# neural-network

./: .gitignore  CMakeLists.txt  next_steps_FULL.md  next_steps_SLIM.md
include/: ActivationFunctions.h  DenseLayer.h  Layer.h  Matrix.h
include/ActivationFunctions/: ActivationFunctions.h
include/Layer/: DenseLayer.h  DropoutLayer.h  GRULayer.h  LSTMLayer.h  Layer.h  RNNLayer.h  StatefulLayer.h
include/activations/: ActivationFunctions.h
include/layers/: DenseLayer.h  DropoutLayer.h  GRULayer.h  LSTMLayer.h  Layer.h  RNNLayer.h  StatefulLayer.h
src/: ActivationFunctions.cpp  DenseLayer.cpp  DropoutLayer.cpp  Layer.cpp  Matrix.cpp  main.cpp
src/ActivationFunctions/: ActivationFunctions.cpp
src/Layer/: DenseLayer.cpp  DropoutLayer.cpp  GRULayer.cpp  LSTMLayer.cpp  Layer.cpp  RNNLayer.cpp
src/activations/: ActivationFunctions.cpp
src/layers/: DenseLayer.cpp  DropoutLayer.cpp  GRULayer.cpp  LSTMLayer.cpp  Layer.cpp  RNNLayer.cpp
src/matrix/: Matrix.cpp
tests/: test_ActivationFunctions.cpp  test_DenseLayer.cpp  test_DropoutLayer.cpp  test_Matrix.cpp  test_main.cpp
tests/ActivationFunctions/: test_ActivationFunctions.cpp
tests/Layer/: test_DenseLayer.cpp  test_DropoutLayer.cpp  test_GRULayer.cpp  test_LSTMLayer.cpp  test_Layer.cpp  test_RNNLayer.cpp  test_StatefulLayer.cpp
tests/activations/: test_ActivationFunctions.cpp
tests/layers/: test_DenseLayer.cpp  test_DropoutLayer.cpp  test_GRULayer.cpp  test_LSTMLayer.cpp  test_Layer.cpp  test_RNNLayer.cpp  test_StatefulLayer.cpp
tests/matrix/: test_Matrix.cpp
